--- a/css/style.css
+++ b/css/style.css
@@ -21,14 +21,16 @@ html{
 
 /* HEADER */
 
+header{
+    background-image: url("./img/jumbo.png");
+}
+
+
+
 .wrapper-header{
-
     width: 70%;
-
-
-    /* DEBUG */
-    background-color: orange;
-    border: 1px solid black;
+   
+    
 }
 
 
@@ -37,11 +39,7 @@ html{
     justify-content: center;
     align-items: center;
 
-    /* DEBUG */
-    border: 1px solid black;
-    background-color: aquamarine;
-    height: 100px;
-    width: 100%;
+   
 }
 
 .logo{
@@ -71,9 +69,7 @@ html{
     justify-content: center;
     height: 400px;
 
-    /* DEBUG */
-    background-color: blue;
-    border: 1px solid black;
+  
 }
 
 .sfondo{
