--- a/css/style.css
+++ b/css/style.css
@@ -138,20 +138,14 @@ header{
 .block5{
     align-items: center;
     justify-content: center;
-    height: 650px;
-
-     /* DEBUG */
      background-color: grey;
-     border: 1px solid black;
+     padding: 40px 20px;
+
 }
 
 .img-big{
-    height: 500px;
     width: 70%;
 
-      /* DEBUG */
-      background-color: green;
-      border: 1px solid black;
 }
 
 .column-footer{
