--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ ul{
     list-style-type: none;
 }
 
-img{
+.img-box{
     max-width: 100%;
     height: 100%;
 }
@@ -143,68 +143,75 @@ header{
 
 }
 
+/* FOOTER */
+.wrapper-footer{
+    background-color: #23272a;
+}
+
 .img-big{
     width: 70%;
 
 }
 
 .column-footer{
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
-    height: 600px;
     width: 100%;
-
-     /* DEBUG */
-     background-color: rgb(44, 44, 44);
-     border: 1px solid black;
-
+    padding: 40px 20px;
 }
 
 .li-big{
-    
     flex-basis: 23.33%;
-    /* DEBUG */
-    background-color: pink;
-    border: 1px solid black;
-    height: 400px;
+   
 }
 
 .li{
-
-    /* DEBUG */
-    background-color: aquamarine;
-    border: 1px solid black;
-    height: 400px;
     width: 11.67%;
+    color: white;
+    padding-left: 5px;
+}
+ul{
+    padding-left: 10px;
 }
 
+
+
+#ita{
+    height: 24px;
+    width: 24px;
+}
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+}
+  
 .wrapper-bottom-footer{
+    justify-content: center;
+    background-color:#23272a;
+  
+}
+
+.bottom-footer{
     align-items: center;
     justify-content: space-between;
-    height: 100px;
-    background-color: rgb(44, 44, 44);
-    border-top: 2px solid white;
+    width: 70%;
+    border-top: 2px solid #7289da;
+    padding: 20px 0;
+
 }
 
-
-.logo2{
-
-    
-
-    /* DEBUG */
-    background-color: orange;
-    border: 1px solid black;
-    height: 30px;
-    width: 70px;
+.violet{
+    color: #5865f2;
 }
 
-.button{
-        /* DEBUG */
-        background-color: orange;
-        border: 1px solid black;
-        height: 30px;
-        width: 70px;
-    
+.btn-footer{
+    background-color: #5865f2;
+    border: none;
 }
 
 
