--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,9 @@ h2{
     margin-bottom: 1em;
 }
 
+a{
+    text-decoration: none;
+}
 
 /* HEADER */
 
@@ -40,6 +43,7 @@ header{
     background-size: cover;
     background-repeat: no-repeat;
     height: 600px;
+    color: white;
 }
 
 
@@ -88,6 +92,7 @@ header{
     align-items: center;
     justify-content: center;
     padding: 120px 40px;
+    text-align: center;
 }
 
 .sfondo{
@@ -138,8 +143,9 @@ header{
 .block5{
     align-items: center;
     justify-content: center;
-     background-color: grey;
-     padding: 40px 20px;
+    background-color: grey;
+    padding: 40px 20px;
+    text-align: center;
 
 }
 
